syntax = "proto3";

import "maths.proto";

package messages;

message Joint {
	vec4 orientation = 1;
	double orientationConfidence = 2;
	vec3 position = 3;
	vec2 position2D = 4;
	double positionConfidence = 5;
}

message Skeleton {
	repeated Joint joints = 1;
	vec3 centerOfMass = 2;
}

message Body {
	int32 uid = 1;
	Skeleton skeleton = 2;

	enum State {
		error = 0;
		noSkeleton = 1;
		calibrating = 2;
		tracked = 3;
		missing = 4;
		lost = 5;
	}

	State state = 3;
	string deviceUID = 4;
}
