syntax = "proto3";

import "google/protobuf/any.proto";

package messages;

message Endpoint {
	enum Type {
		UNDEFINED = 0;  		// Machine gathering users positions
		ACQUISITOR = 1;  	// Machine gathering users positions
		BROADCASTER = 2;		// Machine generating and displaying visuals
		MASTER = 3;			// The main machine, making everything works
		TERMINAL = 4;		// Terminal used to control the master
	}

	string name = 1;
	Type type = 2;
}

message Ping {
	uint64 time = 1;
}


message MasterStatus {
	string activeLayout = 10;
	repeated string connectedDevices = 20;
}

message Datagram {
	enum Type {
		// (0)XX: Common and special types -
		UNDEFINED 			= 0;		// Compatibility purposes
		CLOSE 				= 5;		// Tell other side to close the connection

		HEARTBEAT 			= 7;		// Check connection is still active

		PING 				= 10;	// Ping command
		PONG 				= 11;	// Pong response

		STATUS				= 50;   // Request/Holds the status, the data format
									// depends on the remote

		// 1XX: Acquisitor types -
		ACQ_GET_BODY_STREAM = 110;	// Request stream of bodies
		ACQ_END_BODY_STREAM = 111;	// Requests end of bodies stream
		ACQ_BODY			= 115;	// A Body sent through the stream

		// 2XX: Master types -
		// Layout
		LAYOUT_LAYOUT		= 205;  // Holds a layout
		LAYOUT_LIST 		= 210;  // Asks/Hold the list of layouts
		LAYOUT_CREATE 		= 211;  // Create a new layout
		LAYOUT_OPEN 		= 212;  // Open a layout on the master
		LAYOUT_RENAME 		= 213;	// Rename a layout
		LAYOUT_UPDATE 		= 214;  // Update a layout
		LAYOUT_CLOSE 		= 215;  // Close the opened layout
		LAYOUT_DELETE 		= 216;  // Delete the specified layout

		// 3XX: Broadcaster types -
	}

	Type type = 1;

	google.protobuf.Any data = 100;
}
